// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure adds nonce to style tags: DOM 1`] = `
<style
  data-dash="-ui"
  nonce="EDNnf03nceIOfn39fn3e9h3sdfa"
>
  
  .-ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`Configure changes container to document.body 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`Configure changes key to "css": DOM 1`] = `
<style
  data-dash="css"
>
  
  .css-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`Configure configures hash algorithm 1`] = `"-ui-e038ab58"`;

exports[`Configure turns off vendor prefixing: DOM 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-1ut9bc3{display:flex;}
</style>
`;

exports[`Configure turns on speedy 1`] = `
Object {
  ".-ui-1abu38z": Object {
    "0": "display",
    "display": "block",
    "length": 1,
  },
  ".-ui-1ut9bc3": Object {
    "0": "display",
    "display": "flex",
    "length": 1,
  },
}
`;

exports[`Exceptions throws for unterminated comments 1`] = `"Your styles have an unterminated comment (\\"/*\\" without corresponding \\"*/\\")."`;

exports[`Usage adds dev labels: -flex 1`] = `"-ui-1ut9bc3-flex"`;

exports[`Usage adds dev labels: -flex-block 1`] = `"-ui-14t38od-flex-block"`;

exports[`Usage adds dev labels: -flex-inline 1`] = `"-ui-broszf-flex-inline"`;

exports[`Usage adds styles by order of definition when called: flex, block, inline 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-qaw0al{display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage adds styles by order of definition when called: flex, block, inline 2`] = `
<style
  data-dash="-ui"
>
  
  .-ui-qaw0al{display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows comments 1`] = `"-ui-xmqurs"`;

exports[`Usage allows multiple arguments 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-qaw0al{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows style functions in arguments 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-qaw0al{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows unitless object values: 200x200 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-haiabg{width:200px;height:200px;}
</style>
`;

exports[`Usage creates global variables w/ scales: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--ui-spacing-0:1rem;--ui-spacing-1:2rem;--ui-spacing-2:4rem;}
</style>
`;

exports[`Usage creates global variables: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--ui-colors-blue:#09a;--ui-colors-red:#c12;--ui-colors-light-red:#c1a;--ui-spacing-xs:1rem;--ui-system-p-md:1rem;--ui-system-p-xs:0.25rem;--ui-system-p-sm:0.5rem;--ui-system-p-lg:2rem;--ui-system-p-xl:4rem;}
</style>
`;

exports[`Usage creates theme variables: :root 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-dark-theme{--ui-colors-bg:#000;--ui-colors-text:#fff;}
</style>
`;

exports[`Usage injects global styles 1`] = `
<style
  data-dash="-ui"
>
  
  html{font-size:100%;}
</style>
`;

exports[`Usage passes variables to global styles 1`] = `
Object {
  "colors": Object {
    "bg": "var(--ui-colors-bg)",
    "blue": "var(--ui-colors-blue)",
    "red": "var(--ui-colors-red)",
    "text": "var(--ui-colors-text)",
  },
}
`;

exports[`Usage passes variables to style callbacks 1`] = `
Object {
  "colors": Object {
    "bg": "var(--ui-colors-bg)",
    "blue": "var(--ui-colors-blue)",
    "red": "var(--ui-colors-red)",
    "text": "var(--ui-colors-text)",
  },
}
`;

exports[`Usage passes variables to style callbacks 2`] = `"-ui-dark-theme"`;

exports[`Usage passes variables to style callbacks 3`] = `
Object {
  "colors": Object {
    "bg": "var(--ui-colors-bg)",
    "blue": "var(--ui-colors-blue)",
    "red": "var(--ui-colors-red)",
    "text": "var(--ui-colors-text)",
  },
}
`;

exports[`Usage passes variables to style callbacks 4`] = `"-ui-light-theme"`;

exports[`Usage passes variables to style callbacks 5`] = `
Object {
  "colors": Object {
    "bg": "var(--ui-colors-bg)",
    "blue": "var(--ui-colors-blue)",
    "lightSpecific": "var(--ui-colors-light-specific)",
    "red": "var(--ui-colors-red)",
    "text": "var(--ui-colors-text)",
  },
}
`;

exports[`Usage replaces disallowed characters in dev labels: 400x400 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-49mne8-box-big{width:400px;height:400px;}
</style>
`;

exports[`Usage returns css styles 1`] = `"display:flex;"`;

exports[`Usage returns css styles 2`] = `"display:flex;display:block;display:inline;"`;

exports[`Usage returns css styles 3`] = `"display:flex;display:inline;"`;

exports[`Usage returns single class name 1`] = `"-ui-1ut9bc3"`;

exports[`Usage returns single class name 2`] = `"-ui-qaw0al"`;

exports[`Usage returns single class name 3`] = `"-ui-broszf"`;

exports[`Usage should inject global styles once 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--spacing-0:0;}
</style>
`;

exports[`Usage should inject global styles once 2`] = `
<style
  data-dash="-ui"
>
  
  html{font-size:100%;}
</style>
`;

exports[`Usage should inject global styles once 3`] = `
<style
  data-dash="-ui"
>
  
  :root{--spacing-1:0.5rem;}
</style>
`;

exports[`Usage unmounts global styles w/ callback 1`] = `
<style
  data-dash="-ui"
>
  
  html{font-size:100%;}
</style>
`;
